# pinocchio-examples

./: Dockerfile  README.md  shell.sh  slides.md
counter/: Cargo.toml
counter/src/: lib.rs
counter/tests/: tests.rs
escrow/: Cargo.toml
escrow/src/: lib.rs
escrow/tests/: tests.rs
hello-world/: Cargo.toml
hello-world/src/: lib.rs
hello-world/tests/: tests.rs
