[package]
name = "escrow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio = { version =  "0.8.4", default-features = false }
pinocchio-log = "0.4.0"
pinocchio-pubkey = "0.2.4"
pinocchio-system = "0.2.3"
pinocchio-token = "0.3.0"

[dev-dependencies]
mollusk-svm = "0.1.5"
solana-account = "=2.2.1"
solana-instruction = "=2.2.1"
solana-native-token = "=2.2.1"
solana-program-pack = "=2.2.1"
solana-pubkey = "=2.2.1"
solana-bpf-loader-program = "=2.2.6"
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
