[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio = { version =  "0.8.4", default-features = false }
pinocchio-log = "0.4.0"
pinocchio-pubkey = "0.2.4"

[dev-dependencies]
mollusk-svm = "0.1.5"
solana-instruction = "2.2.1"
solana-pubkey = "2.2.1"
